--- a/bot.yml
+++ b/bot.yml
@@ -1,3 +1,3 @@
-name: Easy Peasy Bot
-description: A simple node.js bot
+name: Slackercise Bot
+description: A bot that encourages exercise
 avatar: avatar.png
